Fixed Horizontal scroll bar

--- a/src/components/Events/Events.module.css
+++ b/src/components/Events/Events.module.css
@@ -13,8 +13,27 @@
     transition: all 1s ease;
 }
 
+.outerWrapper{
+    margin-top: 2rem;
+    margin-bottom:2rem;
+    max-width: 100vw;
+    overflow-x: scroll;
+    position: relative;
+    scrollbar-color: #d5ac68 #f1db9d;
+    scrollbar-width: thin;
+    -ms-overflow-style: none;
+    background-color: #456A9D;
+    opacity: 0.4;
+}
+.innerWrapper{
+    display: flex;
+    justify-content: space-between;
+    flex: 0;
+    font-size: 1.5rem;
+}
+
 .btnCss{
-    @apply cursor-pointer text-white transition duration-100 transform hover:scale-125 hover:text-white active:text-red-500;
+    @apply cursor-pointer pt-4 shrink-0 text-white transition duration-100 pl-5 pr-5 transform hover:scale-125 hover:text-white active:text-red-500 mr-2;
 }
 
 .mobilenavdropdown img{
@@ -367,3 +386,47 @@
         display: none;
     }
 }
+
+@media (any-hover: none) {
+    .pseduoTrack {
+      display: none;
+    }
+  }
+  
+  .outerWrapper::-webkit-scrollbar {
+    height: 5px;
+  }
+  
+  .outerWrapper::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0);
+  }
+  
+  .outerWrapper::-webkit-scrollbar-thumb {
+    height: 5px;
+    background-color: #d5ac68;
+  }
+  
+  .outerWrapper::-webkit-scrollbar-thumb:hover {
+    background-color: #f1db9d;
+  }
+  
+  .outerWrapper::-webkit-scrollbar:vertical {
+    display: none;
+  }
+  
+  .innerWrapper {
+    display: flex;
+    padding-bottom: 10px;
+  }
+  
+  .pseudo-item {
+    height: 300px;
+    width: 369px;
+    margin-right: 59px;
+    flex-shrink: 0;
+    background-color: gray;
+  }
+  
+  .pseudo-item:nth-of-type(2n) {
+    background-color: lightgray;
+  }
